# Agentic-Loop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.agentic-loop/: state.json
agentic_loop/: __init__.py  abort.py  api.py  cli.py  config.py  loop.py  state.py  terminal.py
agentic_loop/connectors/: base.py  mcp.py
agentic_loop/llm/: client.py  openai_compat.py  retry.py
agentic_loop/observability/: journal.py
agentic_loop/orchestration/: automations.py  goal.py  memory.py  orchestrator.py  subagents.py
agentic_loop/skills/: loader.py
agentic_loop/tools/: __init__.py  builtin.py  mcp_bridge.py  registry.py
agentic_loop/worktree/: manager.py
docs/: architecture.md  examples.md  extending.md  publishing.md
examples/custom-tool/: README.md  demo.py
examples/daily-triage/: README.md
examples/daily-triage/.agentic-loop/agents/: implementer.toml
examples/daily-triage/fixtures/: ci-failures.json
examples/daily-triage/skills/triage/: SKILL.md
examples/github-actions/: README.md  workflow-triage.yml
examples/goal-until-green/: README.md
examples/mcp-bridge/: README.md  demo.py
examples/webhook-server/: README.md  server.py
tests/: test_loop.py  test_mcp.py  test_orchestration.py  test_tools.py
