[project]
name = "agentic-loop"
version = "0.3.0"
description = "Lightweight Loop Engineering orchestrator for self-hosted agent loops"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentic-Loop contributors" }]
keywords = ["agent", "llm", "loop-engineering", "orchestrator", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "build>=1.0",
    "twine>=5.0",
]
webhook = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "build>=1.0",
    "twine>=5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/WenSongWang/Agentic-Loop"
Repository = "https://github.com/WenSongWang/Agentic-Loop"
Documentation = "https://github.com/WenSongWang/Agentic-Loop#readme"
Issues = "https://github.com/WenSongWang/Agentic-Loop/issues"

[project.scripts]
agentic-loop = "agentic_loop.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentic_loop*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real API key",
]
